Fix thoughts height on small width devices

--- a/frontend-pub/src/pages/Post/Post.module.css
+++ b/frontend-pub/src/pages/Post/Post.module.css
@@ -96,7 +96,7 @@
 }
 
 .thoughts.open {
-  max-height: 1000px;
+  max-height: 2000px;
   opacity: 1;
   padding-top: 10px;
 }
